# intro-to-ml-ops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
client/: README.md  app.js  index.html  test_integration.py
part-0-prerequisites/: README.md  bootcamp_2_solutions.ipynb  create_mnist_model.py  create_sample_model.py  inference_utils.py  mnist_model.pth  mnist_model_weights.pkl  mnist_model_weights.pth  requirements.txt
part-1-docker/: Dockerfile  README.md  app.py  diagrams.md  iris_model.pkl  requirements.txt  sample_data.json  test_api.py  test_api.sh
part-2-kubernetes/: README.md  SETUP.md  deployment.yaml  diagrams.md  sample_data.json  test_k8s.sh
part-3-cloud/: README.md  deployment-aks.yaml  deployment-eks.yaml  deployment-gke.yaml  diagrams.md
part-4-modal/: README.md  app_modal.py  diagrams.md  sample_data.json  test_modal.sh
previous-course-materials/: bootcamp_1_solutions.ipynb
slides/latex_presentation/: main.tex  referencias.bib
slides/latex_presentation/sections/: cloud-deployment.tex  coding.tex  docker.tex  intro.tex  kubernetes.tex  outro.tex
