[project]
name = "intro-to-mlops"
version = "0.1.0"
description = "MLOps Workshop: From local to cloud deployment."
requires-python = ">=3.10"
dependencies = [
    # For model creation and inference (Part 0, 1, 4)
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "scikit-learn",
    "joblib",

    # For API and web server (Part 1)
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",

    # For testing and utilities
    "matplotlib>=3.3.0",
    "requests",

    # For the serverless deployment example (Part 4)
    "modal",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | slides
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["slides/**", "*.egg-info/**", "__pycache__/**", "venv/**", ".venv/**"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "slides",
    "*.egg-info",
    "build",
    "dist"
]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "slides", "tests"]
skips = ["B101", "B601"]